--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VURMISE</title>
 </head>
-<h2>This is the background</h2>
+<h2>This is the background Vurmise</h2>
 <body>
     <script src="script.js"></script>
 </body>
